--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.0.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
