--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
