--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^4.14.0"
   }
 }
